# aleph_preprocess

./: Dockerfile  pyproject.tom  pyproject.toml  readme.md  requirements.txt  setup.py
sanitize/: __init__.py  cli.py  phone.py  sanitize.py  worker.py
tests/: __init__.py  conftest.py  test_phone.py  test_sanitize_html.py
tests/fixtures/: 8231890529.html  sample1.html  sample1.txt  sample2.html  sample2.txt
