[project]
name = "aleph-preprocess"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "followthemoney",
    "followthemoney-store[postgresql]",
    "servicelayer[google,amazon]"
]


[project.scripts]
sanitize = "sanitize.cli:sanitize"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
