[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanitize"
version = "0.0.1"
authors = [ { name = "Organized Crime and Corruption Reporting Project" } ]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "followthemoney",
    "followthemoney-store[postgresql]",
    "servicelayer[google,amazon]",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "loguru>=0.7.3",
    "click>=8.2.1",
    "phonenumbers",
]

[project.scripts]
sanitize = "sanitize.cli:cli"

[tool.setuptools.packages.find]
include = ["sanitize*"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
include-package-data = true
zip-safe = false


